images error solved

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="icon-container none order3"><img class="project-icon" src="images/brand-github.png" alt="GitHub"></div>
                     <div class="project">
                         <div class="img-container">
-                            <img class="project-img" src="/images/astropulse.png" alt="Astropulse">
+                            <img class="project-img" src="images/astropulse.png" alt="Astropulse">
                         </div>
                         <div class="project-text">
                             <h4 class="project-title">Astropulse</h4>
@@ -43,14 +43,14 @@
                             <p class="project-description">Íntegramente realizado en C++ con la librería SFML, utilizando un patrón de diseño híbrido entre OOD y ECS.</p>
                         </div>
                     </div>
-                    <div class="icon-container"><a href="/archives/Astropulse.rar" download="Astropulse.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
+                    <div class="icon-container"><a href="archives/Astropulse.rar" download="Astropulse.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
                 </div>
 
                 <div class="project-container">
                     <div class="icon-container order3"><a href="https://github.com/Fraggah/Geowar" target="_blank"><img class="project-icon" src="images/brand-github.png" alt="GitHub"></div></a>
                     <div class="project">
                         <div class="img-container">
-                            <img class="project-img" src="/images/geowars.png" alt="Geowars">
+                            <img class="project-img" src="images/geowars.png" alt="Geowars">
                         </div>
                         <div class="project-text">
                             <h4 class="project-title">Geowars</h4>
@@ -60,14 +60,14 @@
                             <p class="project-description">Realizado con C++ y SFML.</p>
                         </div>
                     </div>
-                    <div class="icon-container"><a href="/archives/Geowar.rar" download="Geowar.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
+                    <div class="icon-container"><a href="archives/Geowar.rar" download="Geowar.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
                 </div>
 
                 <div class="project-container">
                     <div class="icon-container order3"><a href="https://github.com/Fraggah/Geowar" target="_blank"><img class="project-icon" src="images/brand-github.png" alt="GitHub"></div></a>
                     <div class="project">
                         <div class="img-container">
-                            <img class="project-img" src="/images/clickscape.png" alt="Clickscape">
+                            <img class="project-img" src="images/clickscape.png" alt="Clickscape">
                         </div>
                         <div class="project-text">
                             <h4 class="project-title">Clickscape</h4>
@@ -79,14 +79,14 @@
                             </p>
                         </div>
                     </div>
-                    <div class="icon-container"><a href="/archives/Clickscape.rar" download="Clickscape.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
+                    <div class="icon-container"><a href="archives/Clickscape.rar" download="Clickscape.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
                 </div>
 
                 <div class="project-container">
                     <div class="icon-container order3"><a href="https://github.com/Fraggah/B-W-Pong" target="_blank"><img class="project-icon" src="images/brand-github.png" alt="GitHub"></div></a>
                     <div class="project">
                         <div class="img-container">
-                            <img class="project-img" src="/images/pong.png" alt="Pong!">
+                            <img class="project-img" src="images/pong.png" alt="Pong!">
                         </div>
                         <div class="project-text">
                             <h4 class="project-title">Pong!</h4>
@@ -98,14 +98,14 @@
                             </p>
                         </div>
                     </div>
-                    <div class="icon-container"><a href="/archives/Pong!.rar" download="Pong!.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
+                    <div class="icon-container"><a href="archives/Pong!.rar" download="Pong!.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
                 </div>
 
                 <div class="project-container">
                     <div class="icon-container order3"><a href="https://github.com/Fraggah/Frogger-cpp" target="_blank"><img class="project-icon" src="images/brand-github.png" alt="GitHub"></div></a>
                     <div class="project">
                         <div class="img-container">
-                            <img class="project-img" src="/images/frogger.png" alt="ASCII Frogger">
+                            <img class="project-img" src="images/frogger.png" alt="ASCII Frogger">
                         </div>
                         <div class="project-text">
                             <h4 class="project-title">ASCII Frogger</h4>
@@ -117,7 +117,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="icon-container"><a href="/archives/Frogger.rar" download="Frogger.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
+                    <div class="icon-container"><a href="archives/Frogger.rar" download="Frogger.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
                 </div>
             </div>
         </section>
@@ -154,7 +154,7 @@
                 <hr>
             </div>
             <div class="about">
-                <div class="about-img"><img class="me" src="/images/me.png" alt="About Me"></div>
+                <div class="about-img"><img class="me" src="images/me.png" alt="About Me"></div>
                 <div class="about-content"><p>Tengo la determinación de crecer y desarrollarme en la industria de los videojuegos, convertirme en el profesional que hoy anhelo ser. Con esfuerzo constante, cada día que pasa estoy más cerca de conseguirlo.</p></div>
             </div>
             <div class="social-container">
