--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
                 <hr>
             </div>
             <div class="projects">
+
+                <div class="project-container">
+                    <div class="icon-container none order3"><img class="project-icon" src="images/brand-github.png" alt="GitHub"></div>
+                    <div class="project">
+                        <div class="img-container">
+                            <img class="project-img" src="images/asteroids.png" alt="Astropulse">
+                        </div>
+                        <div class="project-text">
+                            <h4 class="project-title">Asteroids</h4>
+                            <p class="project-description">
+                                Réplica del mítico juego de Atari, desde los gráficos hasta las dimensiones. Todo hecho con cálculos vectoriales. Único modo 'Arcade': intenta obtener la mejor puntuación en un desafío cada vez más difícil.
+                            </p>
+                            <p class="project-description">Íntegramente realizado en C++ y OpenGL (glut). Utilicé una arquitectura de sistemas individuales y OOD tradicional.</p>
+                        </div>
+                    </div>
+                    <div class="icon-container"><a href="archives/Asteroids.rar" download="Asteroids.rar"><img class="project-icon" src="images/world-download.png" alt="Download"></a></div>
+                </div>
+
                 <div class="project-container">
                     <div class="icon-container none order3"><img class="project-icon" src="images/brand-github.png" alt="GitHub"></div>
                     <div class="project">
